--- a/npm/packages/form/package.json
+++ b/npm/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helsenorge/form",
-  "version": "23.3.1",
+  "version": "24.0.0-beta.6",
   "main": "index.js",
   "publishConfig": {
     "directory": "lib"
@@ -32,25 +32,19 @@
     "pretest": "crlf --set=LF \"src/**/*.{tsx,snap}\"",
     "test": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test",
     "test:update": "node node_modules/@helsenorge/core-build/lib/helsenorge-scripts.js test --u",
-    "prepublishOnly": "npm run build",
-    "precommit-script": "pretty-quick --staged"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "bash node_modules/@helsenorge/core-build/precommit.sh"
-    }
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "@helsenorge/core-build": "^23.0.0",
-    "@helsenorge/core-utils": "^23.0.0",
+    "@helsenorge/core-build": "^24.0.0-beta",
+    "@helsenorge/core-utils": "^24.0.0-beta",
     "@helsenorge/designsystem-react": "^1.0.0-beta",
-    "@helsenorge/toolkit": "^23.0.0"
+    "@helsenorge/toolkit": "^24.0.0-beta"
   },
   "devDependencies": {
-    "@helsenorge/core-build": "^23.0.5",
-    "@helsenorge/core-utils": "^23.2.0",
+    "@helsenorge/core-build": "^24.0.0-beta.6",
+    "@helsenorge/core-utils": "^24.0.0-beta.6",
     "@helsenorge/designsystem-react": "1.0.0-beta120",
-    "@helsenorge/toolkit": "^23.2.0"
+    "@helsenorge/toolkit": "^24.0.0-beta.6"
   },
   "browserslist": [
     "> 0.2% in NO",
